--- a/test_runway.ipynb
+++ b/test_runway.ipynb
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-10-06 18:06:06.150474.\n",
+      "INFO:root:Scraping at 2024-10-06 18:38:00.087438 for inventory ID: 0224600001.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224600001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -80,7 +80,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -90,7 +90,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -100,7 +100,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -110,7 +110,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -120,7 +120,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -130,7 +130,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -140,7 +140,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -150,7 +150,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -160,7 +160,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -170,7 +170,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -180,7 +180,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -190,7 +190,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -200,7 +200,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -210,7 +210,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -220,7 +220,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -230,7 +230,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,7 +240,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -250,7 +250,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:06.150474</td>\n",
+       "      <td>2024-10-06 18:38:00.087438</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -279,24 +279,24 @@
        "17   0224600001        モカ    M          True     NaN   \n",
        "\n",
        "                    timestamp  \\\n",
-       "0  2024-10-06 18:06:06.150474   \n",
-       "1  2024-10-06 18:06:06.150474   \n",
-       "2  2024-10-06 18:06:06.150474   \n",
-       "3  2024-10-06 18:06:06.150474   \n",
-       "4  2024-10-06 18:06:06.150474   \n",
-       "5  2024-10-06 18:06:06.150474   \n",
-       "6  2024-10-06 18:06:06.150474   \n",
-       "7  2024-10-06 18:06:06.150474   \n",
-       "8  2024-10-06 18:06:06.150474   \n",
-       "9  2024-10-06 18:06:06.150474   \n",
-       "10 2024-10-06 18:06:06.150474   \n",
-       "11 2024-10-06 18:06:06.150474   \n",
-       "12 2024-10-06 18:06:06.150474   \n",
-       "13 2024-10-06 18:06:06.150474   \n",
-       "14 2024-10-06 18:06:06.150474   \n",
-       "15 2024-10-06 18:06:06.150474   \n",
-       "16 2024-10-06 18:06:06.150474   \n",
-       "17 2024-10-06 18:06:06.150474   \n",
+       "0  2024-10-06 18:38:00.087438   \n",
+       "1  2024-10-06 18:38:00.087438   \n",
+       "2  2024-10-06 18:38:00.087438   \n",
+       "3  2024-10-06 18:38:00.087438   \n",
+       "4  2024-10-06 18:38:00.087438   \n",
+       "5  2024-10-06 18:38:00.087438   \n",
+       "6  2024-10-06 18:38:00.087438   \n",
+       "7  2024-10-06 18:38:00.087438   \n",
+       "8  2024-10-06 18:38:00.087438   \n",
+       "9  2024-10-06 18:38:00.087438   \n",
+       "10 2024-10-06 18:38:00.087438   \n",
+       "11 2024-10-06 18:38:00.087438   \n",
+       "12 2024-10-06 18:38:00.087438   \n",
+       "13 2024-10-06 18:38:00.087438   \n",
+       "14 2024-10-06 18:38:00.087438   \n",
+       "15 2024-10-06 18:38:00.087438   \n",
+       "16 2024-10-06 18:38:00.087438   \n",
+       "17 2024-10-06 18:38:00.087438   \n",
        "\n",
        "                                                  url  \n",
        "0   https://runway-webstore.com/ap/item/i/m/022460...  \n",
@@ -326,7 +326,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-10-06 18:06:10.867874.\n",
+      "INFO:root:Scraping at 2024-10-06 18:38:03.394938 for inventory ID: 0224608001.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224608001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -372,7 +372,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:10.867874</td>\n",
+       "      <td>2024-10-06 18:38:03.394938</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -382,7 +382,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:10.867874</td>\n",
+       "      <td>2024-10-06 18:38:03.394938</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -392,7 +392,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:10.867874</td>\n",
+       "      <td>2024-10-06 18:38:03.394938</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -402,7 +402,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:10.867874</td>\n",
+       "      <td>2024-10-06 18:38:03.394938</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -412,7 +412,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:10.867874</td>\n",
+       "      <td>2024-10-06 18:38:03.394938</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -422,7 +422,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:10.867874</td>\n",
+       "      <td>2024-10-06 18:38:03.394938</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -431,12 +431,12 @@
       ],
       "text/plain": [
        "  inventory_id color size  is_available  amount                  timestamp  \\\n",
-       "0   0224608001  ブラック    S          True     NaN 2024-10-06 18:06:10.867874   \n",
-       "1   0224608001  ブラック    M          True     NaN 2024-10-06 18:06:10.867874   \n",
-       "2   0224608001   レッド    S          True     NaN 2024-10-06 18:06:10.867874   \n",
-       "3   0224608001   レッド    M          True     NaN 2024-10-06 18:06:10.867874   \n",
-       "4   0224608001  ベージュ    S          True     NaN 2024-10-06 18:06:10.867874   \n",
-       "5   0224608001  ベージュ    M          True     NaN 2024-10-06 18:06:10.867874   \n",
+       "0   0224608001  ブラック    S          True     NaN 2024-10-06 18:38:03.394938   \n",
+       "1   0224608001  ブラック    M          True     NaN 2024-10-06 18:38:03.394938   \n",
+       "2   0224608001   レッド    S          True     NaN 2024-10-06 18:38:03.394938   \n",
+       "3   0224608001   レッド    M          True     NaN 2024-10-06 18:38:03.394938   \n",
+       "4   0224608001  ベージュ    S          True     NaN 2024-10-06 18:38:03.394938   \n",
+       "5   0224608001  ベージュ    M          True     NaN 2024-10-06 18:38:03.394938   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/022460...  \n",
@@ -454,10 +454,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-10-06 18:06:14.600966.\n",
+      "INFO:root:Scraping at 2024-10-06 18:38:07.229465 for inventory ID: 519850129859551965196516368.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368.\n",
+      "ERROR:root:Error when fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368 for inventory_id: 519850129859551965196516368.\n",
       "INFO:root:Skipping for inventory_id: 519850129859551965196516368.\n",
-      "INFO:root:Scraping at 2024-10-06 18:06:16.153735.\n",
+      "INFO:root:Scraping at 2024-10-06 18:38:08.728931 for inventory ID: 0024626006.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0024626006.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -503,7 +504,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:16.153735</td>\n",
+       "      <td>2024-10-06 18:38:08.728931</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -513,7 +514,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:16.153735</td>\n",
+       "      <td>2024-10-06 18:38:08.728931</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -523,7 +524,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:06:16.153735</td>\n",
+       "      <td>2024-10-06 18:38:08.728931</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -532,9 +533,9 @@
       ],
       "text/plain": [
        "  inventory_id   color size  is_available  amount                  timestamp  \\\n",
-       "0   0024626006  オフホワイト    F          True     NaN 2024-10-06 18:06:16.153735   \n",
-       "1   0024626006    ブラック    F          True     NaN 2024-10-06 18:06:16.153735   \n",
-       "2   0024626006    パープル    F          True     NaN 2024-10-06 18:06:16.153735   \n",
+       "0   0024626006  オフホワイト    F          True     NaN 2024-10-06 18:38:08.728931   \n",
+       "1   0024626006    ブラック    F          True     NaN 2024-10-06 18:38:08.728931   \n",
+       "2   0024626006    パープル    F          True     NaN 2024-10-06 18:38:08.728931   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/002462...  \n",
@@ -544,28 +545,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Error when fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368 for inventory_id: 519850129859551965196516368.\n"
-     ]
     }
    ],
    "source": [
-    "failed = []\n",
     "for inventory_id in inventory_ids:\n",
     "    try:\n",
     "        runway_scraper = RunwayScraper(inventory_id)\n",
     "        inventory = runway_scraper.scrape()\n",
     "    except Exception as error:\n",
-    "        failed.append(error)\n",
+    "        logging.error(error)\n",
     "        logging.info(f'Skipping for inventory_id: {inventory_id}.')\n",
     "    else:\n",
-    "        display(inventory)\n",
-    "for error in failed:\n",
-    "    logging.error(error)"
+    "        display(inventory)"
    ]
   },
   {
