--- a/test_runway.ipynb
+++ b/test_runway.ipynb
@@ -34,7 +34,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-10-06 18:39:46.800120 for inventory ID: 0224600001.\n",
+      "INFO:root:Scraping at 2024-10-06 18:41:13.461596 for inventory ID: 0224600001.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224600001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -80,7 +80,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -90,7 +90,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -100,7 +100,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -110,7 +110,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -120,7 +120,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -130,7 +130,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -140,7 +140,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -150,7 +150,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -160,7 +160,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -170,7 +170,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -180,7 +180,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -190,7 +190,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -200,7 +200,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -210,7 +210,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -220,7 +220,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -230,7 +230,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -240,7 +240,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -250,7 +250,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:46.800120</td>\n",
+       "      <td>2024-10-06 18:41:13.461596</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -279,24 +279,24 @@
        "17   0224600001        モカ    M          True     NaN   \n",
        "\n",
        "                    timestamp  \\\n",
-       "0  2024-10-06 18:39:46.800120   \n",
-       "1  2024-10-06 18:39:46.800120   \n",
-       "2  2024-10-06 18:39:46.800120   \n",
-       "3  2024-10-06 18:39:46.800120   \n",
-       "4  2024-10-06 18:39:46.800120   \n",
-       "5  2024-10-06 18:39:46.800120   \n",
-       "6  2024-10-06 18:39:46.800120   \n",
-       "7  2024-10-06 18:39:46.800120   \n",
-       "8  2024-10-06 18:39:46.800120   \n",
-       "9  2024-10-06 18:39:46.800120   \n",
-       "10 2024-10-06 18:39:46.800120   \n",
-       "11 2024-10-06 18:39:46.800120   \n",
-       "12 2024-10-06 18:39:46.800120   \n",
-       "13 2024-10-06 18:39:46.800120   \n",
-       "14 2024-10-06 18:39:46.800120   \n",
-       "15 2024-10-06 18:39:46.800120   \n",
-       "16 2024-10-06 18:39:46.800120   \n",
-       "17 2024-10-06 18:39:46.800120   \n",
+       "0  2024-10-06 18:41:13.461596   \n",
+       "1  2024-10-06 18:41:13.461596   \n",
+       "2  2024-10-06 18:41:13.461596   \n",
+       "3  2024-10-06 18:41:13.461596   \n",
+       "4  2024-10-06 18:41:13.461596   \n",
+       "5  2024-10-06 18:41:13.461596   \n",
+       "6  2024-10-06 18:41:13.461596   \n",
+       "7  2024-10-06 18:41:13.461596   \n",
+       "8  2024-10-06 18:41:13.461596   \n",
+       "9  2024-10-06 18:41:13.461596   \n",
+       "10 2024-10-06 18:41:13.461596   \n",
+       "11 2024-10-06 18:41:13.461596   \n",
+       "12 2024-10-06 18:41:13.461596   \n",
+       "13 2024-10-06 18:41:13.461596   \n",
+       "14 2024-10-06 18:41:13.461596   \n",
+       "15 2024-10-06 18:41:13.461596   \n",
+       "16 2024-10-06 18:41:13.461596   \n",
+       "17 2024-10-06 18:41:13.461596   \n",
        "\n",
        "                                                  url  \n",
        "0   https://runway-webstore.com/ap/item/i/m/022460...  \n",
@@ -326,7 +326,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-10-06 18:39:51.157091 for inventory ID: 0224608001.\n",
+      "INFO:root:Scraping at 2024-10-06 18:41:16.833150 for inventory ID: 0224608001.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0224608001.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -372,7 +372,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:51.157091</td>\n",
+       "      <td>2024-10-06 18:41:16.833150</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -382,7 +382,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:51.157091</td>\n",
+       "      <td>2024-10-06 18:41:16.833150</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -392,7 +392,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:51.157091</td>\n",
+       "      <td>2024-10-06 18:41:16.833150</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -402,7 +402,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:51.157091</td>\n",
+       "      <td>2024-10-06 18:41:16.833150</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -412,7 +412,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:51.157091</td>\n",
+       "      <td>2024-10-06 18:41:16.833150</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -422,7 +422,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:51.157091</td>\n",
+       "      <td>2024-10-06 18:41:16.833150</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -431,12 +431,12 @@
       ],
       "text/plain": [
        "  inventory_id color size  is_available  amount                  timestamp  \\\n",
-       "0   0224608001  ブラック    S          True     NaN 2024-10-06 18:39:51.157091   \n",
-       "1   0224608001  ブラック    M          True     NaN 2024-10-06 18:39:51.157091   \n",
-       "2   0224608001   レッド    S          True     NaN 2024-10-06 18:39:51.157091   \n",
-       "3   0224608001   レッド    M          True     NaN 2024-10-06 18:39:51.157091   \n",
-       "4   0224608001  ベージュ    S          True     NaN 2024-10-06 18:39:51.157091   \n",
-       "5   0224608001  ベージュ    M          True     NaN 2024-10-06 18:39:51.157091   \n",
+       "0   0224608001  ブラック    S          True     NaN 2024-10-06 18:41:16.833150   \n",
+       "1   0224608001  ブラック    M          True     NaN 2024-10-06 18:41:16.833150   \n",
+       "2   0224608001   レッド    S          True     NaN 2024-10-06 18:41:16.833150   \n",
+       "3   0224608001   レッド    M          True     NaN 2024-10-06 18:41:16.833150   \n",
+       "4   0224608001  ベージュ    S          True     NaN 2024-10-06 18:41:16.833150   \n",
+       "5   0224608001  ベージュ    M          True     NaN 2024-10-06 18:41:16.833150   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/022460...  \n",
@@ -454,11 +454,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:Scraping at 2024-10-06 18:39:55.292797 for inventory ID: 519850129859551965196516368.\n",
+      "INFO:root:Scraping at 2024-10-06 18:41:20.002853 for inventory ID: 519850129859551965196516368.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368.\n",
-      "ERROR:root:Error when fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368 for inventory_id: 519850129859551965196516368.\n",
+      "ERROR:root:Error when fetching HTML from https://runway-webstore.com/ap/item/i/m/519850129859551965196516368 for inventory ID: 519850129859551965196516368.\n",
       "INFO:root:Skipping for inventory ID: 519850129859551965196516368.\n",
-      "INFO:root:Scraping at 2024-10-06 18:39:56.900181 for inventory ID: 0024626006.\n",
+      "INFO:root:Scraping at 2024-10-06 18:41:21.424782 for inventory ID: 0024626006.\n",
       "INFO:root:Fetching HTML from https://runway-webstore.com/ap/item/i/m/0024626006.\n",
       "INFO:root:Extracting raw inventory from HTML.\n",
       "INFO:root:Parsing raw inventory to DataFrame.\n",
@@ -504,7 +504,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:56.900181</td>\n",
+       "      <td>2024-10-06 18:41:21.424782</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -514,7 +514,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:56.900181</td>\n",
+       "      <td>2024-10-06 18:41:21.424782</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -524,7 +524,7 @@
        "      <td>F</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-10-06 18:39:56.900181</td>\n",
+       "      <td>2024-10-06 18:41:21.424782</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/002462...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -533,9 +533,9 @@
       ],
       "text/plain": [
        "  inventory_id   color size  is_available  amount                  timestamp  \\\n",
-       "0   0024626006  オフホワイト    F          True     NaN 2024-10-06 18:39:56.900181   \n",
-       "1   0024626006    ブラック    F          True     NaN 2024-10-06 18:39:56.900181   \n",
-       "2   0024626006    パープル    F          True     NaN 2024-10-06 18:39:56.900181   \n",
+       "0   0024626006  オフホワイト    F          True     NaN 2024-10-06 18:41:21.424782   \n",
+       "1   0024626006    ブラック    F          True     NaN 2024-10-06 18:41:21.424782   \n",
+       "2   0024626006    パープル    F          True     NaN 2024-10-06 18:41:21.424782   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/002462...  \n",
