rerun notebook + add requirements.txt

--- a/test.ipynb
+++ b/test.ipynb
@@ -71,7 +71,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-11-23 16:04:18.067536+00:00</td>\n",
+       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -84,9 +84,9 @@
        "      <td>JPY</td>\n",
        "      <td>ブラック</td>\n",
        "      <td>M</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-11-23 16:04:18.067536+00:00</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -101,7 +101,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-11-23 16:04:18.067536+00:00</td>\n",
+       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -116,7 +116,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-11-23 16:04:18.067536+00:00</td>\n",
+       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -131,7 +131,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-11-23 16:04:18.067536+00:00</td>\n",
+       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -146,7 +146,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-11-23 16:04:18.067536+00:00</td>\n",
+       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -154,15 +154,37 @@
        "</div>"
       ],
       "text/plain": [
-       "      item_id  ...                                                url\n",
-       "0  0224608001  ...  https://runway-webstore.com/ap/item/i/m/022460...\n",
-       "1  0224608001  ...  https://runway-webstore.com/ap/item/i/m/022460...\n",
-       "2  0224608001  ...  https://runway-webstore.com/ap/item/i/m/022460...\n",
-       "3  0224608001  ...  https://runway-webstore.com/ap/item/i/m/022460...\n",
-       "4  0224608001  ...  https://runway-webstore.com/ap/item/i/m/022460...\n",
-       "5  0224608001  ...  https://runway-webstore.com/ap/item/i/m/022460...\n",
+       "      item_id            name    brand  price_original  price_current  \\\n",
+       "0  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "1  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "2  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "3  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "4  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "5  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
        "\n",
-       "[6 rows x 12 columns]"
+       "  price_currency color size  is_available  unit_left  \\\n",
+       "0            JPY  ブラック    S         False        NaN   \n",
+       "1            JPY  ブラック    M          True        1.0   \n",
+       "2            JPY   レッド    S         False        NaN   \n",
+       "3            JPY   レッド    M         False        NaN   \n",
+       "4            JPY  ベージュ    S          True        NaN   \n",
+       "5            JPY  ベージュ    M         False        NaN   \n",
+       "\n",
+       "                              asof  \\\n",
+       "0 2024-11-24 17:47:46.867619+00:00   \n",
+       "1 2024-11-24 17:47:46.867619+00:00   \n",
+       "2 2024-11-24 17:47:46.867619+00:00   \n",
+       "3 2024-11-24 17:47:46.867619+00:00   \n",
+       "4 2024-11-24 17:47:46.867619+00:00   \n",
+       "5 2024-11-24 17:47:46.867619+00:00   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "1  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "2  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "3  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "4  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "5  https://runway-webstore.com/ap/item/i/m/022460...  "
       ]
      },
      "execution_count": 3,
@@ -198,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
