--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scrapers import RunwayScraper"
+    "import runway"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "runway_scraper = RunwayScraper('0224608001')"
+    "runway_scraper = runway.Scraper('0224608001')"
    ]
   },
   {
