--- a/test.ipynb
+++ b/test.ipynb
@@ -1,209 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import runway"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "runway_scraper = runway.Scraper('0224608001')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>price_original</th>\n",
-       "      <th>price_current</th>\n",
-       "      <th>price_currency</th>\n",
-       "      <th>color</th>\n",
-       "      <th>size</th>\n",
-       "      <th>is_available</th>\n",
-       "      <th>unit_left</th>\n",
-       "      <th>asof</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0224608001</td>\n",
-       "      <td>バリエコンパクトミニスカート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ブラック</td>\n",
-       "      <td>S</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0224608001</td>\n",
-       "      <td>バリエコンパクトミニスカート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ブラック</td>\n",
-       "      <td>M</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0224608001</td>\n",
-       "      <td>バリエコンパクトミニスカート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>レッド</td>\n",
-       "      <td>S</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0224608001</td>\n",
-       "      <td>バリエコンパクトミニスカート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>レッド</td>\n",
-       "      <td>M</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0224608001</td>\n",
-       "      <td>バリエコンパクトミニスカート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ベージュ</td>\n",
-       "      <td>S</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0224608001</td>\n",
-       "      <td>バリエコンパクトミニスカート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>9900.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ベージュ</td>\n",
-       "      <td>M</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-11-24 17:47:46.867619+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      item_id            name    brand  price_original  price_current  \\\n",
-       "0  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
-       "1  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
-       "2  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
-       "3  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
-       "4  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
-       "5  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
-       "\n",
-       "  price_currency color size  is_available  unit_left  \\\n",
-       "0            JPY  ブラック    S         False        NaN   \n",
-       "1            JPY  ブラック    M          True        1.0   \n",
-       "2            JPY   レッド    S         False        NaN   \n",
-       "3            JPY   レッド    M         False        NaN   \n",
-       "4            JPY  ベージュ    S          True        NaN   \n",
-       "5            JPY  ベージュ    M         False        NaN   \n",
-       "\n",
-       "                              asof  \\\n",
-       "0 2024-11-24 17:47:46.867619+00:00   \n",
-       "1 2024-11-24 17:47:46.867619+00:00   \n",
-       "2 2024-11-24 17:47:46.867619+00:00   \n",
-       "3 2024-11-24 17:47:46.867619+00:00   \n",
-       "4 2024-11-24 17:47:46.867619+00:00   \n",
-       "5 2024-11-24 17:47:46.867619+00:00   \n",
-       "\n",
-       "                                                 url  \n",
-       "0  https://runway-webstore.com/ap/item/i/m/022460...  \n",
-       "1  https://runway-webstore.com/ap/item/i/m/022460...  \n",
-       "2  https://runway-webstore.com/ap/item/i/m/022460...  \n",
-       "3  https://runway-webstore.com/ap/item/i/m/022460...  \n",
-       "4  https://runway-webstore.com/ap/item/i/m/022460...  \n",
-       "5  https://runway-webstore.com/ap/item/i/m/022460...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "runway_scraper.scrape()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "shopping-alert",
