update db example

--- a/db_example.ipynb
+++ b/db_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,8 @@
     "import pandas as pd\n",
     "import psycopg2\n",
     "import yaml\n",
+    "\n",
+    "from base import BaseRecord\n",
     "\n",
     "CONFIG_PATHS = [path for path in Path('configs').iterdir() if path.is_file() and path.suffix == '.yaml']\n",
     "path = CONFIG_PATHS[0]\n",
@@ -74,17 +76,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_conn = DbConnector()\n",
-    "db_conn.connect()"
+    "from base import BaseRecord\n",
+    "from runway import Record\n",
+    "\n",
+    "schema_name = 'shopping_alert'\n",
+    "table_name = 'runway'\n",
+    "record_type = Record"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _init_table(schema_name: str, table_name: str, record_type: BaseRecord) -> str:\n",
+    "    # Make use of `record_type.get_db_table_dtypes()` and `record_type.get_db_index()`\n",
+    "    # Construct a string that looks like\n",
+    "    # CREATE TABLE schema_name.items (\n",
+    "    #     item_id TEXT NOT NULL,\n",
+    "    #     ...\n",
+    "    # );\n",
+    "    # CREATE INDEX item_id ON items(item_id);\n",
+    "    # ...\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_init_table('shopping_alert', 'runway', record_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,18 +159,18 @@
        " 'PRIMARY KEY': '(item_id, color, size, asof)'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "platform.Record.get_db_table_dtypes()"
+    "record_type.get_db_table_dtypes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -129,13 +183,13 @@
        " 'item_id_asof': 'item_id, asof'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "platform.Record.get_db_index()"
+    "record_type.get_db_index()"
    ]
   },
   {
