--- a/db_example.ipynb
+++ b/db_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
     "    def _init_schema(self) -> None:\n",
     "        cursor = self.conn.cursor()\n",
     "        cursor.execute(f\"CREATE SCHEMA IF NOT EXISTS {self.SCHEMA_NAME}\")\n",
-    "        cursor.close\n",
+    "        cursor.close()\n",
     "        self.conn.commit()\n",
     "\n",
     "    def _init_table(self) -> None:\n",
@@ -97,48 +97,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from base import BaseRecord\n",
-    "from runway import Record\n",
+    "import runway\n",
     "\n",
     "schema_name = 'shopping_alert'\n",
     "table_name = 'runway'\n",
-    "record_type = Record"
+    "record_type = runway.Record"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _init_table(schema_name: str, table_name: str, record_type: BaseRecord) -> str:\n",
+    "def _init_table(schema_name: str, table_name: str, record_type: type[BaseRecord]) -> str:\n",
     "    # Make use of `record_type.get_db_table_dtypes()` and `record_type.get_db_index()`\n",
     "    # Construct a string that looks like\n",
-    "    # CREATE TABLE schema_name.items (\n",
+    "    # CREATE TABLE schema_name.table_name (\n",
     "    #     item_id TEXT NOT NULL,\n",
     "    #     ...\n",
     "    # );\n",
-    "    # CREATE INDEX item_id ON items(item_id);\n",
+    "    # CREATE INDEX item_id ON schema_name.table_name(item_id);\n",
     "    # ...\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_init_table('shopping_alert', 'runway', record_type)"
+    "_init_table(schema_name, table_name, record_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        " 'PRIMARY KEY': '(item_id, color, size, asof)'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        " 'item_id_asof': 'item_id, asof'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
