--- a/db_example.ipynb
+++ b/db_example.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +124,42 @@
     "    # );\n",
     "    # CREATE INDEX item_id ON schema_name.table_name(item_id);\n",
     "    # ...\n",
-    "    pass"
+    "    table_dict = record_type.get_db_table_dtypes()\n",
+    "    content_lst = []\n",
+    "    for i in table_dict.items():\n",
+    "        content = i[0] +' ' + i[1]\n",
+    "        content_lst.append(content)\n",
+    "    table = schema_name + '.' + table_name\n",
+    "    query = f'CREATE TABLE {table}('\n",
+    "    for content in content_lst:\n",
+    "        query += content + ', '\n",
+    "    query_final = query[:-2] + ');'\n",
+    "\n",
+    "    index_dict = record_type.get_db_index()\n",
+    "    index_query = ''\n",
+    "    for i in index_dict.items():\n",
+    "        index_query += f'CREATE INDEX {i[0]} ON {table}({i[1]});'\n",
+    "          \n",
+    "    return query_final, index_query\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('CREATE TABLE shopping_alert.runway(item_id TEXT NOT NULL, name TEXT NOT NULL, brand TEXT NOT NULL, price_original DOUBLE PRECISION NOT NULL, price_current DOUBLE PRECISION NOT NULL, price_currency TEXT NOT NULL, color TEXT NOT NULL, size TEXT NOT NULL, is_available BOOLEAN NOT NULL, unit_left DOUBLE PRECISION, asof TIMESTAMP WITH TIME ZONE NOT NULL, url TEXT NOT NULL, PRIMARY KEY (item_id, color, size, asof));',\n",
+       " 'CREATE INDEX item_id ON shopping_alert.runway(item_id);CREATE INDEX color ON shopping_alert.runway(color);CREATE INDEX size ON shopping_alert.runway(size);CREATE INDEX asof ON shopping_alert.runway(asof);CREATE INDEX item_id_asof ON shopping_alert.runway(item_id, asof);')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "_init_table(schema_name, table_name, record_type)"
    ]
